update division
